<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/package_box"
        android:layout_width="412dp"
        android:layout_height="170dp"
        android:background="@drawable/package_box_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewItemPrice"
        android:layout_width="220dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:text="@string/php200_00_ek1_string"
        android:textColor="@color/welcome_back__color"
        app:layout_constraintStart_toEndOf="@+id/photo_ek"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemDesc" />

    <ImageView
        android:id="@+id/photo_ek"
        android:layout_width="144dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:contentDescription="photo_ek1"
        android:src="@drawable/photo_ek1"
        app:layout_constraintEnd_toStartOf="@+id/textViewItemPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/package_box"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_ek1_string"
        app:layout_constraintStart_toEndOf="@+id/photo_ek"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemPrice" />

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/wash_dry___fold__small__ek1_string"
        android:textColor="@color/welcome_back__color"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/photo_ek"
        app:layout_constraintTop_toTopOf="@+id/package_box" />

    <TextView
        android:id="@+id/textViewItemDesc"

        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/per_bag_max_5kg_string"
        android:textColor="@color/per_bag_max_3kg_color"
        app:layout_constraintStart_toEndOf="@+id/photo_ek"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemName" />

</androidx.constraintlayout.widget.ConstraintLayout>