<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/wdf_small"
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp">

        <View
            android:id="@+id/package_box"
            android:layout_width="341dp"
            android:layout_height="166dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/package_box_shape" />

        <ImageView
            android:id="@+id/photo_ek"
            android:layout_width="144dp"
            android:layout_height="139dp"
            android:layout_alignStart="@+id/package_box"
            android:layout_alignEnd="@+id/package_box"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="187dp"
            android:contentDescription="photo_ek1"
            android:src="@drawable/photo_ek1" />

        <TextView
            android:id="@+id/wash_dry___fold__small__ek"

            android:layout_width="171dp"
            android:layout_height="38dp"
            android:layout_alignStart="@+id/package_box"
            android:layout_alignEnd="@+id/package_box"
            android:layout_alignParentTop="true"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:text="@string/wash_dry___fold__small__ek1_string"
            android:textColor="@color/welcome_back__color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/per_bag_max_5kg"

            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wash_dry___fold__small__ek"
            android:layout_alignStart="@+id/package_box"
            android:layout_alignEnd="@+id/package_box"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="9dp"
            android:text="@string/per_bag_max_5kg_string"
            android:textColor="@color/per_bag_max_3kg_color" />

        <TextView
            android:id="@+id/php200_00_ek"

            android:layout_width="63dp"
            android:layout_height="22dp"
            android:layout_below="@+id/per_bag_max_5kg"
            android:layout_alignStart="@+id/package_box"
            android:layout_alignEnd="@+id/package_box"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="115dp"
            android:text="@string/php200_00_ek1_string"
            android:textColor="@color/welcome_back__color" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/package_box"
            android:layout_alignEnd="@+id/package_box"
            android:layout_alignParentTop="true"
            android:layout_marginStart="163dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="90dp"
            android:text="@string/add_ek1_string" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>