<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.extra.PreSelectShopActivity">
    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/_bg__dashboard_ek2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/_bg__dashboard_ek2_shape" />

        <View
            android:id="@+id/rectangle_"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle_24_shape"
            android:layout_marginLeft="0dp" />

        <RelativeLayout
            android:id="@+id/shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-99dp"
            android:layout_marginTop="-100dp"
            android:layout_marginLeft="-99dp">

            <View
                android:id="@+id/ellipse_1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="70dp"
                android:alpha="0.49000000953674"
                android:background="@drawable/ellipse_1_shape"
                android:layout_marginLeft="0dp" />

            <View
                android:id="@+id/ellipse_2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="0dp"
                android:alpha="0.49000000953674"
                android:background="@drawable/ellipse_2_shape"
                android:layout_marginLeft="90dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="191dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="258dp"
            android:layout_marginEnd="201dp"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/desc_string"
            android:textColor="@color/welcome_back__color"
            android:textSize="14sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="201dp" />

        <TextView
            android:id="@+id/textViewAfternoonMorningName"
            android:layout_width="199dp"
            android:layout_height="22dp"
            android:layout_below="@+id/rectangle_"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginStart="17dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="194dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/afternoon_morning__bin_laden_string"
            android:textColor="@color/welcome_back__color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="194dp" />

        <RelativeLayout
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="82dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="43dp">

            <View
                android:id="@+id/rectangle_28"
                android:layout_width="330dp"
                android:layout_height="188dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_28_shape"
                android:layout_marginLeft="0dp" />

            <View
                android:id="@+id/_rectangle_29"
                android:layout_width="238dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="137dp"
                android:background="@drawable/_rectangle_29_shape"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/buttonStart_washing_now"
                android:layout_width="147dp"
                android:layout_height="27.5dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="147dp"
                android:text="@string/_start_washing_now__string"
                android:textColor="@color/welcome_back__color"
                android:textSize="13sp"
                android:layout_marginLeft="25dp" />

            <ImageView
                android:id="@+id/_arrow_1"
                android:layout_width="49dp"
                android:layout_height="100dp"
                android:layout_marginStart="171dp"
                android:layout_marginTop="110dp"
                android:contentDescription="@string/arrow_1"
                android:src="@drawable/_arrow_1"
                android:layout_marginLeft="171dp" />

            <TextView
                android:id="@+id/laundry_delivery_say_goodbye_to_dirty_clothes_"
                android:layout_width="220dp"
                android:layout_height="45.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="94dp"
                android:text="@string/laundry_delivery_say_goodbye_to_dirty_clothes__string"
                android:textColor="@color/_sign_in_color"
                android:textSize="13sp"
                android:layout_marginLeft="16dp" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>