<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/page_registration_ek1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

            <View
                android:id="@+id/_bg__registration_ek"
                android:layout_width="409dp"
                android:layout_height="728dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/_bg__registration_ek2_shape" />

            <RelativeLayout
                android:id="@+id/shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-99dp"
                android:layout_marginTop="-100dp">

                <View
                    android:id="@+id/ellipse_1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="70dp"
                    android:alpha="0.49000000953674"
                    android:background="@drawable/ellipse_1_shape" />

                <View
                    android:id="@+id/ellipse_2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="0dp"
                    android:alpha="0.49000000953674"
                    android:background="@drawable/ellipse_2_shape" />

            </RelativeLayout>

            <TextView
                android:id="@+id/welcome_onboard_"
                android:layout_width="191dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="114dp"
                android:gravity="center"
                android:text="@string/welcome_onboard__string"
                android:textColor="@color/welcome_back__color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/can_t_wait_to_serve_you_"
                android:layout_width="234dp"
                android:layout_height="31.5dp"
                android:layout_below="@+id/welcome_onboard_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="81dp"
                android:layout_marginLeft="73dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="94dp"
                android:gravity="center"
                android:text="@string/can_t_wait_to_serve_you__string"
                android:textColor="@color/welcome_back__color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/buttonAlreadyHaveAnAccount"
                android:layout_width="251dp"
                android:layout_height="26dp"
                android:layout_below="@+id/button_ek1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="81dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="77dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:text="@string/_already_have_an_account___sign_in_string"
                android:textColor="@color/welcome_back__color"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/button_ek1"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_ek5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="44dp">

                <View
                    android:id="@+id/rectangle_1_ek1"
                    android:layout_width="325dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_1_ek1_shape" />

                <TextView
                    android:id="@+id/buttonRegister"
                    android:layout_width="333dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="-3dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/register_string"
                    android:textColor="@color/_sign_in_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/input_ek2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_ek3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp">

                <View
                    android:id="@+id/rectangle_2_ek2"
                    android:layout_width="325dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_2_ek2_shape" />

                <EditText
                    android:id="@+id/enter_your_email_ek1"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="17dp"
                    android:ems="10"
                    android:hint="@string/enter_your_email_ek1_string"
                    android:inputType="textEmailAddress" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/input_ek3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/can_t_wait_to_serve_you_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp">

                <View
                    android:id="@+id/rectangle_2_ek3"
                    android:layout_width="325dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_2_ek3_shape" />

                <EditText
                    android:id="@+id/enter_your_full_name"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/enter_your_full_name_string"
                    android:inputType="textPersonName"
                    android:textColor="@color/welcome_back__color" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/input_ek4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_ek2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp">

                <View
                    android:id="@+id/rectangle_2_ek4"
                    android:layout_width="325dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/rectangle_2_ek4_shape" />

                <EditText
                    android:id="@+id/enter_password_ek1"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/enter_password_ek1_string"
                    android:inputType="textPassword" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/input_ek5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_ek4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp">

                <View
                    android:id="@+id/rectangle_2_ek5"
                    android:layout_width="325dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_2_ek5_shape" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="17dp"
                    android:ems="10"
                    android:hint="@string/confirm_password_string"
                    android:inputType="textPassword" />

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>